src/test/deca/test_compilateur/syntax/invalid/created/class/met_missing_dot.deca
// Description :
//    appel methode avec le point manquant (un espace à la place)
//
// Resultats :
//		Syntaxe error

{
int a = a b();
}